Fix spacing in article sections

--- a/math.software---mvp/src/app/main/Main.css
+++ b/math.software---mvp/src/app/main/Main.css
@@ -4,8 +4,8 @@
 
 main > article > section {
     display: flex;
-    padding: 0 5vw;
-    align-content: center;
+    padding: var(--content-padding);
+    padding-top: 0;
     flex-direction: column;
 }
 
@@ -38,6 +38,6 @@ main section > p {
 
 @media (min-width: 1200px) {
     main > article > section {
-        padding: 0 30vw;
+        margin: 0 30vw;
     }
 }
